--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 			<div class="destination" id="barcelona">
                 <h2>America</h2>
             </div>
+			<div class="destination" id="barcelona">
+                <h2>Scotland</h2>
+            </div>
         </div>
     </div>
 
